--- a/CC.Web/CC.Web.csproj
+++ b/CC.Web/CC.Web.csproj
@@ -122,6 +122,7 @@
     <Content Include="app\attendee\attendees.html" />
     <Content Include="app\attendee\attendees.js" />
     <Content Include="app\services\model.js" />
+    <Content Include="app\services\routemediator.js" />
     <Content Include="app\session\sessions.html" />
     <Content Include="app\session\sessions.js" />
     <Content Include="app\speaker\speakers.html" />
