Add files from part 2 module 02

--- a/CC.Web/CC.Web.csproj
+++ b/CC.Web/CC.Web.csproj
@@ -122,6 +122,12 @@
     <Content Include="app\attendee\attendees.html" />
     <Content Include="app\attendee\attendees.js" />
     <Content Include="app\services\model.js" />
+    <Content Include="app\services\repositories.js" />
+    <Content Include="app\services\repository.abstract.js" />
+    <Content Include="app\services\repository.attendee.js" />
+    <Content Include="app\services\repository.lookup.js" />
+    <Content Include="app\services\repository.session.js" />
+    <Content Include="app\services\repository.speaker.js" />
     <Content Include="app\services\routemediator.js" />
     <Content Include="app\session\sessions.html" />
     <Content Include="app\session\sessions.js" />
