Add code from part 2 module 03

--- a/CC.Web/CC.Web.csproj
+++ b/CC.Web/CC.Web.csproj
@@ -131,6 +131,8 @@
     <Content Include="app\services\routemediator.js" />
     <Content Include="app\session\sessions.html" />
     <Content Include="app\session\sessions.js" />
+    <Content Include="app\speaker\speakerdetail.html" />
+    <Content Include="app\speaker\speakerdetail.js" />
     <Content Include="app\speaker\speakers.html" />
     <Content Include="app\speaker\speakers.js" />
     <Content Include="ccfavicon.ico" />
