--- a/CC.Web/packages.config
+++ b/CC.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.Breeze.StorageWIP" version="1.0.2" targetFramework="net452" />
   <package id="AngularJS.Animate" version="1.2.22" targetFramework="net452" />
   <package id="AngularJS.Core" version="1.2.22" targetFramework="net452" />
   <package id="AngularJS.Route" version="1.2.22" targetFramework="net452" />
